[gd_scene load_steps=26 format=2]

[ext_resource path="res://juegoreciclaje/trashcans/RedTrashCan.tscn" type="PackedScene" id=1]
[ext_resource path="res://juegoreciclaje/trashcans/GreenTrashCan.tscn" type="PackedScene" id=2]
[ext_resource path="res://juegoreciclaje/player/player.tscn" type="PackedScene" id=3]
[ext_resource path="res://juegoreciclaje/trashcans/BlueTrashCan.tscn" type="PackedScene" id=4]
[ext_resource path="res://juegoreciclaje/HUD/HUD.tscn" type="PackedScene" id=5]
[ext_resource path="res://juegoreciclaje/enemy/Spawner.gd" type="Script" id=6]
[ext_resource path="res://juegoreciclaje/world.gd" type="Script" id=7]
[ext_resource path="res://juegoreciclaje/level/Illustration.png" type="Texture" id=8]
[ext_resource path="res://juegoreciclaje/OneWayTile.gd" type="Script" id=9]
[ext_resource path="res://juegoreciclaje/TileMap.gd" type="Script" id=10]
[ext_resource path="res://fonts/Righteous-Regular.ttf" type="DynamicFontData" id=11]
[ext_resource path="res://assets/iconos/salir.png" type="Texture" id=12]
[ext_resource path="res://juegoreciclaje/HUD/GAMEOVER.tscn" type="PackedScene" id=13]
[ext_resource path="res://images/fondo-libro.png" type="Texture" id=14]
[ext_resource path="res://assets/controles.png" type="Texture" id=15]
[ext_resource path="res://juegoreciclaje/EnciclopediaReciclaje.tscn" type="PackedScene" id=16]
[ext_resource path="res://assets/reciclaje/Block-z2.png" type="Texture" id=17]
[ext_resource path="res://SFX/3.1. mouse-click1.ogg" type="AudioStream" id=18]
[ext_resource path="res://juegoreciclaje/Background.png" type="Texture" id=19]

[sub_resource type="ConvexPolygonShape2D" id=10]
points = PoolVector2Array( 64, 16, 0, 16, 0, 0, 64, 0 )

[sub_resource type="TileSet" id=2]
resource_local_to_scene = true
0/name = "Illustration.png 0"
0/texture = ExtResource( 8 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 16, 64, 16 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 10 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 10 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0
1/name = "Illustration.png 1"
1/texture = ExtResource( 8 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 32, 64, 16 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 81, 9 )

[sub_resource type="DynamicFont" id=7]
size = 17
use_mipmaps = true
use_filter = true
font_data = ExtResource( 11 )

[sub_resource type="DynamicFont" id=8]
size = 39
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 11 )

[sub_resource type="DynamicFont" id=9]
size = 25
use_mipmaps = true
use_filter = true
font_data = ExtResource( 11 )

[node name="World" type="Node"]
script = ExtResource( 7 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_left = -241.0
margin_top = -8.0
margin_right = 779.0
margin_bottom = 599.0
texture = ExtResource( 19 )
expand = true
stretch_mode = 6

[node name="StaticBody2D" type="StaticBody2D" parent="."]
position = Vector2( -236, -3 )
scale = Vector2( 0.5, 0.42 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="StaticBody2D"]
position = Vector2( 472, 7.14286 )
scale = Vector2( 2, 2.38095 )
polygon = PoolVector2Array( -230, 540, -226, -5, -248, -5, -253, 609, 805, 609, 805, 609, 802, -2, 758, -3, 757, 598, -230, 598 )

[node name="TileMap" type="TileMap" parent="."]
show_behind_parent = true
tile_set = SubResource( 2 )
cell_size = Vector2( 16, 16 )
collision_layer = 63
collision_mask = 63
format = 1
tile_data = PoolIntArray( 2293744, 0, 0, 2293746, 0, 0, 2293749, 0, 0, 2293750, 0, 0, 2293754, 0, 0, 2293758, 0, 0, 2228226, 0, 0, 2228228, 0, 0, 2228232, 0, 0, 2228236, 0, 0, 2228237, 0, 0, 2228240, 0, 0, 2228242, 0, 0, 2228244, 0, 0, 2228248, 0, 0, 2228252, 0, 0, 2228256, 0, 0, 2228259, 0, 0, 2228262, 0, 0, 2228265, 0, 0, 2228266, 0, 0, 2228269, 0, 0, 2359280, 1, 0, 2359281, 1, 0, 2359284, 1, 0, 2359287, 1, 0, 2359290, 1, 0, 2359293, 1, 0, 2293760, 1, 0, 2293763, 1, 0, 2293766, 1, 0, 2293769, 1, 0, 2293770, 1, 0, 2293772, 1, 0, 2293775, 1, 0, 2293777, 1, 0, 2293780, 1, 0, 2293782, 1, 0, 2293785, 1, 0, 2293788, 1, 0, 2293791, 1, 0, 2293794, 1, 0, 2293797, 1, 0, 2293800, 1, 0, 2293803, 1, 0, 2293805, 1, 0, 2424816, 1, 0, 2424817, 1, 0, 2424820, 1, 0, 2424823, 1, 0, 2424825, 1, 0, 2424827, 1, 0, 2424830, 1, 0, 2359297, 1, 0, 2359299, 1, 0, 2359301, 1, 0, 2359304, 1, 0, 2359306, 1, 0, 2359309, 1, 0, 2359311, 1, 0, 2359313, 1, 0, 2359316, 1, 0, 2359318, 1, 0, 2359321, 1, 0, 2359324, 1, 0, 2359326, 1, 0, 2359329, 1, 0, 2359331, 1, 0, 2359334, 1, 0, 2359336, 1, 0, 2359339, 1, 0, 2359341, 1, 0, 2490352, 1, 0, 2490356, 1, 0, 2490359, 1, 0, 2490361, 1, 0, 2490363, 1, 0, 2490365, 1, 0, 2424832, 1, 0, 2424833, 1, 0, 2424836, 1, 0, 2424839, 1, 0, 2424842, 1, 0, 2424845, 1, 0, 2424847, 1, 0, 2424850, 1, 0, 2424853, 1, 0, 2424855, 1, 0, 2424858, 1, 0, 2424861, 1, 0, 2424863, 1, 0, 2424866, 1, 0, 2424867, 1, 0, 2424868, 1, 0, 2424869, 1, 0, 2424872, 1, 0, 2424875, 1, 0, 2424877, 1, 0 )
script = ExtResource( 10 )

[node name="OneWayTile" type="TileMap" parent="."]
show_behind_parent = true
position = Vector2( 0, 52 )
tile_set = SubResource( 2 )
cell_size = Vector2( 16, 16 )
show_collision = true
collision_friction = 0.1
collision_layer = 0
collision_mask = 0
format = 1
tile_data = PoolIntArray( 1048587, 0, 0, 1048591, 0, 0, 1048593, 0, 0, 1114123, 1, 0, 1114126, 1, 0, 1114129, 1, 0, 1507322, 0, 0, 1507326, 0, 0, 1441792, 0, 0, 1441821, 0, 0, 1441823, 0, 0, 1441825, 0, 0, 1441827, 0, 0, 1572858, 1, 0, 1572862, 1, 0, 1507328, 1, 0, 1507357, 1, 0, 1507360, 1, 0, 1507361, 1, 0, 1507363, 1, 0 )
script = ExtResource( 9 )

[node name="StaticBody2D" type="StaticBody2D" parent="OneWayTile"]
collision_layer = 63
collision_mask = 63

[node name="CollisionShape2D" type="CollisionShape2D" parent="OneWayTile/StaticBody2D"]
position = Vector2( -17, 361 )
shape = SubResource( 3 )
one_way_collision = true

[node name="StaticBody2D2" type="StaticBody2D" parent="OneWayTile"]
show_behind_parent = true
collision_layer = 63
collision_mask = 63

[node name="CollisionShape2D" type="CollisionShape2D" parent="OneWayTile/StaticBody2D2"]
position = Vector2( 542, 359 )
shape = SubResource( 3 )
one_way_collision = true

[node name="StaticBody2D3" type="StaticBody2D" parent="OneWayTile"]
show_behind_parent = true
collision_layer = 63
collision_mask = 63

[node name="CollisionShape2D" type="CollisionShape2D" parent="OneWayTile/StaticBody2D3"]
position = Vector2( 253, 265 )
shape = SubResource( 3 )
one_way_collision = true

[node name="Player" parent="." instance=ExtResource( 3 )]
show_behind_parent = true
position = Vector2( -32, 527 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 0, 7 )
offset = Vector2( 265, 290 )
current = true
zoom = Vector2( 0.96, 1 )
drag_margin_h_enabled = true
drag_margin_v_enabled = true

[node name="TrashCanContainer" type="Node2D" parent="."]
position = Vector2( 655, 44 )

[node name="RedTrashCan" parent="." instance=ExtResource( 1 )]
show_behind_parent = true
position = Vector2( 371, 516 )
collision_layer = 2
collision_mask = 2
mass = 1.0

[node name="GreenTrashCan" parent="." instance=ExtResource( 2 )]
show_behind_parent = true
position = Vector2( 133, 516 )
collision_layer = 8
collision_mask = 8
mass = 1.0

[node name="BlueTrashCan" parent="." instance=ExtResource( 4 )]
show_behind_parent = true
position = Vector2( 253, 513 )
collision_layer = 4
collision_mask = 4
mass = 1.0

[node name="Spawner" type="Node2D" parent="."]
position = Vector2( 246, 14 )
script = ExtResource( 6 )

[node name="SpawnTimer" type="Timer" parent="Spawner"]

[node name="HUD" parent="." instance=ExtResource( 5 )]
margin_left = -153.0
margin_top = -9.0
margin_right = -283.0
margin_bottom = -76.0

[node name="TrashContainer" type="Node2D" parent="."]

[node name="Instrucciones" type="Control" parent="."]
pause_mode = 2
margin_right = 40.0
margin_bottom = 40.0

[node name="TextureRect" type="TextureRect" parent="Instrucciones"]
margin_left = -236.0
margin_top = -3.0
margin_right = 1826.0
margin_bottom = 1446.0
rect_scale = Vector2( 0.5, 0.42 )
texture = ExtResource( 14 )

[node name="CONTROLES" type="TextureButton" parent="Instrucciones"]
margin_left = -177.0
margin_top = 75.0
margin_right = 223.0
margin_bottom = 386.0
texture_normal = ExtResource( 15 )

[node name="Unpause" type="TextureButton" parent="Instrucciones"]
margin_left = -227.0
margin_top = -3.0
margin_right = -159.0
margin_bottom = 65.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 0
size_flags_vertical = 0
action_mode = 0
texture_normal = ExtResource( 12 )

[node name="TextureRect2" type="TextureRect" parent="Instrucciones"]
margin_left = -14.0
margin_top = 364.0
margin_right = 66.0
margin_bottom = 452.0
texture = ExtResource( 17 )
expand = true
stretch_mode = 6

[node name="Controles" type="Label" parent="Instrucciones"]
margin_left = 390.0
margin_top = 149.0
margin_right = 693.0
margin_bottom = 521.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 7 )
text = "¡Evita que la basura caiga al suelo!

Toma control del jugador con las teclas A y D, y agarra los tachos de basura con Z. Mueve los tachos para que la basura caiga en el tacho correcto, y sueltalos en el lugar indicado presionando Z otra vez. ¡Fijate de los colores! No te olvides que la basura tiene que caer en el tacho apropiado.

El juego acabara cuando se te acaban las vidas, o si terminas el juego en el menu de pausa"
align = 3
autowrap = true

[node name="Instrucciones" type="Label" parent="Instrucciones"]
margin_left = 389.0
margin_top = 75.0
margin_right = 695.0
margin_bottom = 129.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 8 )
text = "INSTRUCCIONES"

[node name="CogerTacho" type="Label" parent="Instrucciones"]
margin_left = -63.0
margin_top = 454.0
margin_right = 126.0
margin_bottom = 488.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 9 )
text = "COGER TACHO"

[node name="GAMEOVER" parent="." instance=ExtResource( 13 )]
visible = false
margin_left = -233.0
margin_top = -8.0
margin_right = -229.0
margin_bottom = -1.0

[node name="Ayuda" parent="." instance=ExtResource( 16 )]
pause_mode = 2
visible = false
margin_left = -241.0
margin_top = -1.0
margin_right = -241.0
margin_bottom = -1.0

[node name="Click" type="AudioStreamPlayer" parent="."]
pause_mode = 2
stream = ExtResource( 18 )

[connection signal="timeout" from="Spawner/SpawnTimer" to="Spawner" method="_on_SpawnTimer_timeout"]
[connection signal="pressed" from="Instrucciones/Unpause" to="." method="_on_Unpause_pressed"]
